--- a/style.css
+++ b/style.css
@@ -2,12 +2,15 @@
   box-sizing: border-box;
 }
 body {
-  font-family: Arial, Helvetica, san-serif;
+  font-family: "Mulish", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
 }
 .header {
   padding: 20px 70px 20px 32px;
   display: flex;
   align-items: center;
+  margin-bottom: 30px;
 }
 .menu-button {
   padding: 0;
@@ -45,6 +48,7 @@ body {
   background: transparent;
   border: none;
   padding: 12px 23px;
+  width: 100%;
 }
 .button-search {
   padding: 0;
@@ -78,5 +82,46 @@ body {
 .user-avatar {
   width: 40px;
   height: 40px;
+  border-radius: 50%;
+}
+.sidebar {
+  padding-left: 32px;
+}
+.nav-menu {
+  margin: 0 0 60px 0px;
+  padding-left: 0;
+  list-style: none;
+}
+.nav-link {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: #898989;
+}
+.nav-link:hover {
+  color: #ff0000;
+}
+.nav-link:hover .icon {
+  fill: #ff0000;
+}
+.nav-item {
+  margin-bottom: 28px;
+}
+.nav-item .icon {
+  fill: #898989;
+}
+.nav-text {
+  margin-left: 13px;
+}
+.nav-title {
+  font-family: Mulish;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 23px;
+  margin-bottom: 30px;
+}
+.nav-image {
+  width: 26px;
+  height: 26px;
   border-radius: 50%;
 }
